--- a/DiseñoAngular/front-angular/package.json
+++ b/DiseñoAngular/front-angular/package.json
@@ -16,7 +16,7 @@
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/router": "^19.2.8",
     "front-angular": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -27,6 +27,7 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "jasmine": "^5.6.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
