--- a/DiseñoAngular/front-angular/package.json
+++ b/DiseñoAngular/front-angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.8",
     "front-angular": "file:",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
