Terminar de modificar para el baseModel

--- a/ModelSecurityCt/Web/Web.csproj
+++ b/ModelSecurityCt/Web/Web.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
